--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :body %>
-    <%= f.association :user %>
+    <%= f.input :user_id, as: :hidden, input_html: { value: current_user.id } %>
   </div>
 
   <div class="form-actions">
