--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,8 @@
 <h1 class="navbar-text float-right">
   <% if user_signed_in? %>
-    Logged in as <strong><%= current_user.email %></strong>.
+    Logged in as <strong><%= current_user.email %></strong>. <br>
     <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-    <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+    <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> <br>
     <%= link_to "Blogs", blogs_path, :class => 'navbar-link'  %>
     <%= link_to "Replies", replies_path, :class => 'navbar-link'  %>
   <% else %>
