--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -5,8 +5,8 @@
 
   <div class="form-inputs">
     <%= f.input :text %>
-    <%= f.association :user %>
     <%= f.association :blog %>
+    <%= f.input :user_id, as: :hidden, input_html: { value: current_user.id } %>
   </div>
 
   <div class="form-actions">
