--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -19,8 +19,10 @@
         <td><%= reply.user_id %></td>
         <td><%= reply.blog_id %></td>
         <td><%= link_to 'Show', reply %></td>
-        <td><%= link_to 'Edit', edit_reply_path(reply) %></td>
-        <td><%= link_to 'Destroy', reply, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if reply.user_id == current_user.id %>
+          <td><%= link_to 'Edit', edit_reply_path(reply) %></td>
+          <td><%= link_to 'Destroy', reply, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +30,5 @@
 
 <br>
 
-<%= link_to 'New Reply', new_reply_path %>
+<%= link_to 'New Reply', new_reply_path %> <br>
+<%= link_to 'Home', root_path %>
