--- a/app/views/replies/show.html.erb
+++ b/app/views/replies/show.html.erb
@@ -15,5 +15,5 @@
   <%= @reply.blog_id %>
 </p>
 
-<%= link_to 'Edit', edit_reply_path(@reply) %> |
+<%= link_to 'Edit', edit_reply_path(@reply) if @reply.user_id == current_user.id %> |
 <%= link_to 'Back', replies_path %>
